// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display bubbles 1`] = `
<Tooltip>
  <g>
    <circle
      className="bubble-chart-bubble"
      r={45}
      style={
        Object {
          "fill": undefined,
          "stroke": undefined,
        }
      }
      transform="translate(33.21428571428571, 70.07936507936509) scale(1)"
    />
  </g>
</Tooltip>
`;

exports[`should display bubbles 2`] = `
<Tooltip>
  <g>
    <circle
      className="bubble-chart-bubble"
      r={33.57142857142858}
      style={
        Object {
          "fill": undefined,
          "stroke": undefined,
        }
      }
      transform="translate(66.42857142857142, 33.57142857142858) scale(1)"
    />
  </g>
</Tooltip>
`;

exports[`should render bubble links 1`] = `
<Tooltip>
  <g>
    <Link
      to="foo"
    >
      <circle
        className="bubble-chart-bubble"
        r={45}
        style={
          Object {
            "fill": undefined,
            "stroke": undefined,
          }
        }
        transform="translate(33.21428571428571, 70.07936507936509) scale(1)"
      />
    </Link>
  </g>
</Tooltip>
`;

exports[`should render bubble links 2`] = `
<Tooltip>
  <g>
    <Link
      to="bar"
    >
      <circle
        className="bubble-chart-bubble"
        r={33.57142857142858}
        style={
          Object {
            "fill": undefined,
            "stroke": undefined,
          }
        }
        transform="translate(66.42857142857142, 33.57142857142858) scale(1)"
      />
    </Link>
  </g>
</Tooltip>
`;

exports[`should render bubbles with click handlers 1`] = `
<Tooltip>
  <g>
    <circle
      className="bubble-chart-bubble"
      onClick={[Function]}
      r={45}
      style={
        Object {
          "fill": undefined,
          "stroke": undefined,
        }
      }
      transform="translate(33.21428571428571, 70.07936507936509) scale(1)"
    />
  </g>
</Tooltip>
`;

exports[`should render bubbles with click handlers 2`] = `
<Tooltip>
  <g>
    <circle
      className="bubble-chart-bubble"
      onClick={[Function]}
      r={33.57142857142858}
      style={
        Object {
          "fill": undefined,
          "stroke": undefined,
        }
      }
      transform="translate(66.42857142857142, 33.57142857142858) scale(1)"
    />
  </g>
</Tooltip>
`;
